--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "fastapi-injector>=0.5.1",
     "websockets>=11.0.3",
     "faker>=19.11.0",
+    "pydantic-xml>=2.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
