--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pydantic-xml>=2.3.0",
     "loguru>=0.7.2",
     "aioreactive>=0.16.0",
+    "yapf>=0.40.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
