--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ requires-python = ">= 3.10"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.ruff]
+ignore-init-module-imports = true
+
 [tool.rye]
 managed = true
 dev-dependencies = []
