--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dependencies = [
     "injector>=0.21.0",
     "pydantic-settings>=2.0.3",
     "uvicorn>=0.23.2",
-    "fastapi-injector>=0.5.1",
     "websockets>=11.0.3",
     "faker>=19.11.0",
     "pydantic-xml>=2.3.0",
@@ -19,6 +18,7 @@ dependencies = [
     "sqlalchemy>=2.0.23",
     "asyncpg>=0.28.0",
     "pydantic>=2.4.2",
+    "fastapi-injector>=0.5.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
@@ -49,7 +49,7 @@ dev-dependencies = [
 ]
 
 [tool.rye.scripts]
-server = { cmd = "python -m uvicorn src.main:app --host 127.0.0.1 --port 8000", env = { PYTHONPATH = "./src/"} }
+server = { cmd = "python -m uvicorn src.main:app --host 127.0.0.1 --port 8000 --lifespan on", env = { PYTHONPATH = "./src/"} }
 test-server = { cmd = "python -m uvicorn src.test_main:app --host 127.0.0.1 --port 8000", env = { PYTHONPATH = "./src/"} }
 lint = { chain = [ "lint:ruff", "lint:yapf" ] }
 "lint:ruff" = "ruff check src --fix"
