--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "asyncpg>=0.28.0",
     "pydantic>=2.4.2",
     "fastapi-injector>=0.5.3",
+    "sqlmodel>=0.0.14",
+    "aiodocker>=0.21.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
@@ -48,13 +50,19 @@ dev-dependencies = [
 ]
 
 [tool.rye.scripts]
-server = { cmd = "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000 --lifespan on", env = { PYTHONPATH = "./src/"} }
+server = { cmd = "python -m uvicorn main:app --host 0.0.0.0 --port 8000 --lifespan on", env = { PYTHONPATH = "./src/"} }
 lint = { chain = [ "lint:ruff", "lint:yapf" ] }
 "lint:ruff" = "ruff check src --fix"
 "lint:yapf" = "yapf -i -r src"
 
+create-tables = "python src/create_tables.py"
+drop-tables = "python src/drop_tables.py"
+
 [tool.hatch.metadata]
 allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 # [[tool.rye.sources]]
 # name = "default"
