--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,6 @@ allow-direct-references = true
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
-# [[tool.rye.sources]]
-# name = "default"
-# url = "https://mirror.baidu.com/pypi/simple"
+[[tool.rye.sources]]
+name = "default"
+url = "https://mirror.baidu.com/pypi/simple"
